# Nontent

./: .gitignore  Jenkinsfile  README.md  package-lock.json
.circleci/: config.yml
Nontent Extension/Nontent Extension.xcodeproj/: project.pbxproj
Nontent Extension/Shared (App)/: ViewController.swift
Nontent Extension/Shared (Extension)/: SafariWebExtensionHandler.swift
Nontent Extension/iOS (App)/: AppDelegate.swift  SceneDelegate.swift
Nontent Extension/macOS (App)/: AppDelegate.swift
OAuth-Twitter/: .gitignore  README.md  package.json  server.js
OAuth-Twitter/controllers/: authController.js
OAuth-Twitter/middleware/: errorMiddleware.js
OAuth-Twitter/routes/: authRoutes.js
Twitter Scrapping Post/Shared (App)/: ViewController.swift
Twitter Scrapping Post/Shared (Extension)/: SafariWebExtensionHandler.swift
Twitter Scrapping Post/iOS (App)/: AppDelegate.swift  (+1 more)
ai/: .gitignore  README.md  pyproject.toml
ai/ai/: api.py  clusters_info_kmeans.py  config.py  data.py  dataset_maker.py  main.ipynb
ai/data/: kmeans_model.pkl  tweet_analyzer_model.pkl  tweet_analyzer_vectorizer.pkl  tweets.csv
ai/src/: data.py  main.ipynb
backend/: Dockerfile  Jenkinsfile  package.json
docs/: top_twitter_accounts.txt
extension/: background.js  manifest.json
notebooks/: clustering_model.pkl  corpus.mm  corpus.mm.index  data_analysis.ipynb  tweets_analysis.ipynb
web-app/: Dockerfile  Jenkinsfile  README.md  app.vue  landing.html  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  redditOauth.html  redditauth.js  sonar-project.properties
(+69 files in other folders)
